third_party/WebKit/Source/WebCore/platform/ScrollView.cpp
@@ -940,6 +940,7 @@ bool ScrollView::isScrollCornerVisible() const
 
 void ScrollView::scrollbarStyleChanged()
 {
+    contentsResized();
     updateScrollbars(scrollOffset());
 }
 
